...
    case labCollectionAddButton
    case labCollectionSearchBar
    case labCollectionView
    
    // Lab Info VC
    case labInfoMainView
    case labInfoSaveButton
    case labInfoNameTextView
    case labInfoDescriptionTextView
    case labInfoAddEquipmentButton
    case labInfoDeleteLabButton
    case labInfoTableView
    
    // Lab Equipment Selection VC
    case labEquipmentSelectionDoneButton
    case labEquipmentSelectionSearchBar
    case labEquipmentSelectionTableView
    
...
