...
//  Copyright © 2019 2Letters. All rights reserved.
//

import UIKit

enum AlertCase {
    case succeedToSaveLab
    case succeedToSaveEquipment

    case failToLoadEquipments
    case failToLoadLabEquipments
    case failToLoadEquipmentInfo
    case failToLoadEquipmentUser
...
    case failToDeleteEquipment

    case attemptCreateLab
    case attemptToDeleteLab
    case attemptToDeleteEquipment

    case invalidLabInfoInput
    case invalidEquipmentInfoInput
    
    var description: String {
        return String(describing: self)
    }
}

struct AlertString {
    static let okay = "Okay"
    static let yes = "Yes"
    static let no = "No"
    static let oops = "Oops!"
    
    // Titles
    static let succeedToSaveLabTitle = "Successfully saved this lab"
    static let succeedToSaveEquipmentTitle = "Successfully saved this equipment"
...
